--- a/pubnub-chat/app/css/app.css
+++ b/pubnub-chat/app/css/app.css
@@ -1,30 +1,49 @@
-/* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+
+#messages div.message {
+    border-bottom: solid #fff 1px;
+    padding: 0.7em;
+    font-family: 'Chau Philomene One', sans-serif;
+    height: 58px;
 }
 
-.menu:before {
-  content: "[";
+#messages div.message p {
+    margin: 0.2em;
+    padding: 0;
+    color: #333;
 }
 
-.menu:after {
-  content: "]";
+#messages div.message p.user {
+    font-weight: bold;
 }
 
-.menu > li {
-  display: inline;
+#messages .avatar-frame {
+    float: left;
+    margin-right: 10px;
+    padding: 0px;
+    border: 2px solid #fff;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+#messages .avatar-frame, .avatar-frame img {
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius: 10px; /* Saf3+, Chrome */
+    border-radius: 10px; /* Opera 10.5, IE 9 */
+    /*-moz-border-radius: 30px; Disabled for FF1+ */
+    float: left;
+    margin-right: 14px;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+label {
+    font-weight: bold;
+}
+
+.well, #progress_bar {
+    border-radius: 0;
+    margin-top: 0;
+}
+
+.bar, #progress_bar {
+    width: 100%;
+    margin-bottom: 0;
 }
